
AC_INIT(src/main.c)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gconf-editor,2.8.2)
AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

AC_PROG_CC
AC_HEADER_STDC
AM_PROG_LIBTOOL
AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2


changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

if test "x$prefix" = "xNONE"; then
  GNOMELOCALEDIR=$ac_default_prefix/share/locale
else
  GNOMELOCALEDIR=$prefix/share/locale
fi
AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR", [Locate directory])

PKG_CHECK_MODULES(GCONF_EDITOR,
		  gconf-2.0 >= 2.8.1 		\
		  gtk+-2.0 >= 2.0.2 		\
		  libgnome-2.0 >= 1.96.0        \
		  libgnomeui-2.0 >= 2.5.4)

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

ALL_LINGUAS="am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id it ja kn ko li lt lv mk ml mn mr ms nb ne nl no or pa pl pt pt_BR ro ru sk sl sq sr sr@Latn sv ta th tr uk vi zh_CN zh_TW"

GETTEXT_PACKAGE=gconf-editor
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_GLIB_GNU_GETTEXT

dnl Get the GConf defaults source, and sed it to make the mandatory source.
if test "x$GCONF_SCHEMA_INSTALL_SOURCE" = "x"; then
        GCONF_DEFAULTS_SOURCE=`gconftool-2 --get-default-source`
else
        GCONF_DEFAULTS_SOURCE=$GCONF_SCHEMA_INSTALL_SOURCE
fi
GCONF_DEFAULTS_SOURCE=`gconftool-2 --get-default-source`
AC_ARG_WITH(gconf-defaults-source,
        [  --with-gconf-defaults-source  The GConf source of the default values],
        GCONF_DEFAULTS_SOURCE="$withval",)
AC_DEFINE_UNQUOTED(GCONF_DEFAULTS_SOURCE, "$GCONF_DEFAULTS_SOURCE", [GConf defaults source])
AC_MSG_RESULT([Using config source $GCONF_DEFAULTS_SOURCE for default values])

GCONF_MANDATORY_SOURCE=`echo $GCONF_DEFAULTS_SOURCE | sed -e s/gconf.xml.defaults/gconf.xml.mandatory/`
AC_ARG_WITH(gconf-mandatory-source,
        [  --with-gconf-mandatory-source  The GConf source of the mandatory values],
        GCONF_MANDATORY_SOURCE="$withval",)
AC_DEFINE_UNQUOTED(GCONF_MANDATORY_SOURCE, "$GCONF_MANDATORY_SOURCE", [GConf mandatory source])
AC_MSG_RESULT([Using config source $GCONF_MANDATORY_SOURCE for mandatory values])

AC_SUBST(GCONF_EDITOR_LIBS)
AC_SUBST(GCONF_EDITOR_CFLAGS)

AC_OUTPUT([
Makefile
data/Makefile
data/gconf-editor.schemas
data/icons/Makefile
docs/Makefile
docs/C/Makefile
src/Makefile
po/Makefile.in
])

echo "
Configuration Sources:
GConf default values source: ${GCONF_DEFAULTS_SOURCE}
GConf mandatory values source: ${GCONF_MANDATORY_SOURCE}"
