AC_INIT(check-mime.pl)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 2.2.0)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

ALL_LINGUAS="am az be bg ca da de el es et eu fi fr ga gl he hi hu it ja ko lt lv mk mn ms nl nn no pl pt pt_BR ro ru sk sl sv tr uk vi wa zh_CN zh_TW"
GETTEXT_PACKAGE=gnome-mime-data
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
icons/Makefile
man/Makefile
man/gnome-vfs-mime.5
po/Makefile.in
gnome-mime-data-2.0.pc
])
