AC_INIT(check-mime.pl)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 2.4.1)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

ALL_LINGUAS="am ar az be bg bn ca cs cy da de el eo es et eu fa fi fr ga gl he hi hu id is it ja ko li lt lv mk ml mn ms ne nl nn no pl pt pt_BR ro ru sk sl sq sr sr@Latn sv tr uk vi wa yi zh_CN zh_TW"
GETTEXT_PACKAGE=gnome-mime-data
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
man/Makefile
man/gnome-vfs-mime.5
po/Makefile.in
gnome-mime-data-2.0.pc
])
